# rust-1brc

./: .gitignore  Cargo.toml  maskfile.md  results.md  stations.csv
src/: lib.rs  main.rs
src/processor/: baseline.rs  mod.rs  rayon_mmap_string.rs  rayon_string.rs
