[package]
name = "rust-1brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
byte-unit = "5.1.4"
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
dhat = "0.3.3"
memmap2 = "0.9.4"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.1"
serde = { version = "1.0.197", features = ["derive", "rc"] }

[profile.release]
incremental = true
debug = 1
lto = false

[features]
default = []
dhat-on = []
